# aloGrizzlython

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
ALO Test files/: bb44786.txt  bb44786Two.txt  ja12304.txt  ja12304Two.txt  ss33906.txt  ss33906Two.txt
alo-program/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/: App.css  App.js  firebase.js
src/components_institution/: Dashboard.js  FileView.js  Sidebar.js  StudentDataTable.js  StudentView.js
src/components_student/: Dashboard.js  FileView.js  Form.js  NavBar.js  Sidebar.js
src/utils/: append.js  append.ts  authToken.js  firebaseutils.js  initEmptyMerkleTree  initEmptyMerkleTree.js  initEmptyMerkleTree.ts  merkle-tree-utils.ts  replace.js  replace.ts  verify.ts  web3utils.ts
